tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__integration__circle_has_equal_radii.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[Circle[]]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x360"><rect x="0" y="0" width="360.00" height="360.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x360)">
<ellipse cx="180.00" cy="180.00" rx="166.67" ry="166.67" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00"/>
</g>
</svg>
