tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__integration__circle_round_with_explicit_image_size.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[Circle[], ImageSize -> {400, 200}]\")"
---
<svg width="400" height="200" viewBox="0 0 400 200" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_400x200"><rect x="0" y="0" width="400.00" height="200.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_400x200)">
<ellipse cx="200.00" cy="100.00" rx="92.59" ry="92.59" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00"/>
</g>
</svg>
