tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__integration__complex_diagram.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{\n          Red, Disk[{0, 0}, 0.5],\n          Blue, Circle[{2, 0}, 0.8],\n          Green, Polygon[{{4, 0}, {5, 1}, {5, -1}}],\n          Black, Line[{{0, 0}, {2, 0}, {4, 0}}],\n          Orange, Arrow[{{-1, -1}, {-1, 1}}],\n          Text[\\\"Origin\\\", {0, -0.8}]\n        }, ImageSize -> 400]\")"
---
<svg width="400" height="133" viewBox="0 0 400 133" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_400x133"><rect x="0" y="0" width="400.00" height="133.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_400x133)">
<ellipse cx="76.85" cy="66.50" rx="30.79" ry="30.79" fill="rgb(255,0,0)"/>
<ellipse cx="200.00" cy="66.50" rx="49.26" ry="49.26" fill="none" stroke="rgb(0,0,255)" stroke-width="1.00"/>
<polygon points="323.15,66.50 384.72,4.93 384.72,128.07" fill="rgb(0,255,0)"/>
<polyline points="76.85,66.50 200.00,66.50 323.15,66.50" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-linejoin="round" stroke-linecap="butt"/>
<polyline points="15.28,128.07 15.28,4.93" fill="none" stroke="rgb(255,128,0)" stroke-width="1.00" stroke-linejoin="round" stroke-linecap="butt"/>
<polygon points="15.28,4.93 19.76,20.93 10.80,20.93" fill="rgb(255,128,0)"/>
<text x="76.85" y="115.76" fill="rgb(255,128,0)" font-size="14" font-weight="normal" font-style="normal" text-anchor="middle" dominant-baseline="central">Origin</text>
</g>
</svg>
