tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__integration__full_hue_rings_expression.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[Table[{EdgeForm[{GrayLevel[0, 0.5]}], Hue[(-11+q+10r)/72, 1, 1, 0.6], Disk[(8-r){Cos[2Pi q/12], Sin[2Pi q/12]}, (8-r)/3]}, {r, 6}, {q, 12}]]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x360"><rect x="0" y="0" width="360.00" height="360.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x360)">
<ellipse cx="288.25" cy="117.50" rx="41.67" ry="41.67" fill="rgb(255,0,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="242.50" cy="71.75" rx="41.67" ry="41.67" fill="rgb(255,21,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="55.00" rx="41.67" ry="41.67" fill="rgb(255,42,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="117.50" cy="71.75" rx="41.67" ry="41.67" fill="rgb(255,64,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="71.75" cy="117.50" rx="41.67" ry="41.67" fill="rgb(255,85,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="55.00" cy="180.00" rx="41.67" ry="41.67" fill="rgb(255,106,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="71.75" cy="242.50" rx="41.67" ry="41.67" fill="rgb(255,127,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="117.50" cy="288.25" rx="41.67" ry="41.67" fill="rgb(255,149,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="305.00" rx="41.67" ry="41.67" fill="rgb(255,170,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="242.50" cy="288.25" rx="41.67" ry="41.67" fill="rgb(255,191,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="288.25" cy="242.50" rx="41.67" ry="41.67" fill="rgb(255,212,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="305.00" cy="180.00" rx="41.67" ry="41.67" fill="rgb(255,234,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="272.79" cy="126.43" rx="35.71" ry="35.71" fill="rgb(255,212,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="233.57" cy="87.21" rx="35.71" ry="35.71" fill="rgb(255,234,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="72.86" rx="35.71" ry="35.71" fill="rgb(255,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="126.43" cy="87.21" rx="35.71" ry="35.71" fill="rgb(234,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="87.21" cy="126.43" rx="35.71" ry="35.71" fill="rgb(213,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="72.86" cy="180.00" rx="35.71" ry="35.71" fill="rgb(191,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="87.21" cy="233.57" rx="35.71" ry="35.71" fill="rgb(170,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="126.43" cy="272.79" rx="35.71" ry="35.71" fill="rgb(149,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="287.14" rx="35.71" ry="35.71" fill="rgb(128,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="233.57" cy="272.79" rx="35.71" ry="35.71" fill="rgb(106,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="272.79" cy="233.57" rx="35.71" ry="35.71" fill="rgb(85,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="287.14" cy="180.00" rx="35.71" ry="35.71" fill="rgb(64,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="257.32" cy="135.36" rx="29.76" ry="29.76" fill="rgb(85,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="224.64" cy="102.68" rx="29.76" ry="29.76" fill="rgb(64,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="90.71" rx="29.76" ry="29.76" fill="rgb(42,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="135.36" cy="102.68" rx="29.76" ry="29.76" fill="rgb(21,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="102.68" cy="135.36" rx="29.76" ry="29.76" fill="rgb(0,255,0)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="90.71" cy="180.00" rx="29.76" ry="29.76" fill="rgb(0,255,21)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="102.68" cy="224.64" rx="29.76" ry="29.76" fill="rgb(0,255,43)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="135.36" cy="257.32" rx="29.76" ry="29.76" fill="rgb(0,255,64)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="269.29" rx="29.76" ry="29.76" fill="rgb(0,255,85)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="224.64" cy="257.32" rx="29.76" ry="29.76" fill="rgb(0,255,106)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="257.32" cy="224.64" rx="29.76" ry="29.76" fill="rgb(0,255,128)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="269.29" cy="180.00" rx="29.76" ry="29.76" fill="rgb(0,255,149)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="241.86" cy="144.29" rx="23.81" ry="23.81" fill="rgb(0,255,128)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="215.71" cy="118.14" rx="23.81" ry="23.81" fill="rgb(0,255,149)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="108.57" rx="23.81" ry="23.81" fill="rgb(0,255,170)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="144.29" cy="118.14" rx="23.81" ry="23.81" fill="rgb(0,255,191)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="118.14" cy="144.29" rx="23.81" ry="23.81" fill="rgb(0,255,213)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="108.57" cy="180.00" rx="23.81" ry="23.81" fill="rgb(0,255,234)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="118.14" cy="215.71" rx="23.81" ry="23.81" fill="rgb(0,255,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="144.29" cy="241.86" rx="23.81" ry="23.81" fill="rgb(0,234,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="251.43" rx="23.81" ry="23.81" fill="rgb(0,213,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="215.71" cy="241.86" rx="23.81" ry="23.81" fill="rgb(0,191,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="241.86" cy="215.71" rx="23.81" ry="23.81" fill="rgb(0,170,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="251.43" cy="180.00" rx="23.81" ry="23.81" fill="rgb(0,149,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="226.39" cy="153.21" rx="17.86" ry="17.86" fill="rgb(0,170,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="206.79" cy="133.61" rx="17.86" ry="17.86" fill="rgb(0,149,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="126.43" rx="17.86" ry="17.86" fill="rgb(0,127,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="153.21" cy="133.61" rx="17.86" ry="17.86" fill="rgb(0,106,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="133.61" cy="153.21" rx="17.86" ry="17.86" fill="rgb(0,85,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="126.43" cy="180.00" rx="17.86" ry="17.86" fill="rgb(0,64,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="133.61" cy="206.79" rx="17.86" ry="17.86" fill="rgb(0,43,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="153.21" cy="226.39" rx="17.86" ry="17.86" fill="rgb(0,21,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="233.57" rx="17.86" ry="17.86" fill="rgb(0,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="206.79" cy="226.39" rx="17.86" ry="17.86" fill="rgb(21,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="226.39" cy="206.79" rx="17.86" ry="17.86" fill="rgb(42,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="233.57" cy="180.00" rx="17.86" ry="17.86" fill="rgb(64,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="210.93" cy="162.14" rx="11.90" ry="11.90" fill="rgb(42,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="197.86" cy="149.07" rx="11.90" ry="11.90" fill="rgb(64,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="144.29" rx="11.90" ry="11.90" fill="rgb(85,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="162.14" cy="149.07" rx="11.90" ry="11.90" fill="rgb(106,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="149.07" cy="162.14" rx="11.90" ry="11.90" fill="rgb(128,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="144.29" cy="180.00" rx="11.90" ry="11.90" fill="rgb(149,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="149.07" cy="197.86" rx="11.90" ry="11.90" fill="rgb(170,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="162.14" cy="210.93" rx="11.90" ry="11.90" fill="rgb(191,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="180.00" cy="215.71" rx="11.90" ry="11.90" fill="rgb(213,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="197.86" cy="210.93" rx="11.90" ry="11.90" fill="rgb(234,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="210.93" cy="197.86" rx="11.90" ry="11.90" fill="rgb(255,0,255)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
<ellipse cx="215.71" cy="180.00" rx="11.90" ry="11.90" fill="rgb(255,0,234)" fill-opacity="0.6" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-opacity="0.5"/>
</g>
</svg>
