tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__integration__graphics_evaluates_table_content.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[Table[Disk[{i, 0}, 0.5], {i, 3}]]\")"
---
<svg width="360" height="120" viewBox="0 0 360 120" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x120"><rect x="0" y="0" width="360.00" height="120.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x120)">
<ellipse cx="68.89" cy="60.00" rx="55.56" ry="55.56" fill="rgb(0,0,0)"/>
<ellipse cx="180.00" cy="60.00" rx="55.56" ry="55.56" fill="rgb(0,0,0)"/>
<ellipse cx="291.11" cy="60.00" rx="55.56" ry="55.56" fill="rgb(0,0,0)"/>
</g>
</svg>
