tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__integration__graphics_table_with_symbolic_pi_step.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Yellow, Disk[{0, 0}, 0.3], Pink, Table[Disk[{Cos[θ], Sin[θ]}, 0.25], {θ, 0, 2 Pi - Pi/4, Pi/4}]}]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x360"><rect x="0" y="0" width="360.00" height="360.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x360)">
<ellipse cx="180.00" cy="180.00" rx="40.00" ry="40.00" fill="rgb(255,255,0)"/>
<ellipse cx="313.33" cy="180.00" rx="33.33" ry="33.33" fill="rgb(255,128,128)"/>
<ellipse cx="274.28" cy="85.72" rx="33.33" ry="33.33" fill="rgb(255,128,128)"/>
<ellipse cx="180.00" cy="46.67" rx="33.33" ry="33.33" fill="rgb(255,128,128)"/>
<ellipse cx="85.72" cy="85.72" rx="33.33" ry="33.33" fill="rgb(255,128,128)"/>
<ellipse cx="46.67" cy="180.00" rx="33.33" ry="33.33" fill="rgb(255,128,128)"/>
<ellipse cx="85.72" cy="274.28" rx="33.33" ry="33.33" fill="rgb(255,128,128)"/>
<ellipse cx="180.00" cy="313.33" rx="33.33" ry="33.33" fill="rgb(255,128,128)"/>
<ellipse cx="274.28" cy="274.28" rx="33.33" ry="33.33" fill="rgb(255,128,128)"/>
</g>
</svg>
